
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* etype; int eip; } ;


 int OGGfile ;
 TYPE_1__* RET ;
 int Targetprint () ;
 int arguments ;
 int atoi (char*) ;
 int b ;
 char* banner ;
 int bf ;
 int buildF (int ) ;
 int cpy (int ,int ) ;
 int exit (int ) ;
 int getchar () ;
 int input ;
 int oggf (int ) ;
 int printf (char*,char*,...) ;
 int reverseInt (int ) ;
 int system (char*) ;

int main(int argc,char* argv[])
    {
          if(argc<2)
          {
           system("CLS");

           printf("%s%s",banner,arguments);

           Targetprint();exit(0);
           }

            input=atoi(argv[1]);

            switch(input)
            {
                   case 0:
                   reverseInt(RET[0].eip);
                   cpy(RET[0].eip,bf);
                   break;

                   case 1:
                   reverseInt(RET[1].eip);
                   cpy(RET[1].eip,bf);
                   break;

                   case 2:
                   reverseInt(RET[2].eip);
                   cpy(RET[2].eip,bf);
                   break;

                   case 3:
                   reverseInt(RET[3].eip);
                   cpy(RET[3].eip,bf);
                   break;

                   case 4:
                   reverseInt(RET[4].eip);
                   cpy(RET[4].eip,bf);
                   break;
            }
                   printf("[!]Using : %s retaddress\n",RET[input].etype);
                   buildF(b); oggf(OGGfile); getchar();

        return 0;
    }
